fixed router-app and overlapped title

--- a/cd2024bfs1g1-frontend/src/main/ngx/src/app/public/public-component/public-component.component.scss
+++ b/cd2024bfs1g1-frontend/src/main/ngx/src/app/public/public-component/public-component.component.scss
@@ -1,5 +1,6 @@
 .nav-left-side {
   margin-top: 5px;
+  min-width: 250px;
 }
 
 .nav-right-side {
@@ -71,6 +72,7 @@
   justify-content: space-between;
   height: 100%;
 }
+
 
 .nav {
   width: 100%;
